src/github.com/ebay/akutan/query/parser/testdata/legacy/errors/vim.res
Query:
?s ?p ?o
:wq

Parsed:
Error: unable to parse query: line 2 column 1: unparsed text: ':wq'
